Add @lexical/eslint-plugin to ESLint configuration and update rules

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@lexical/eslint-plugin": "^0.33.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
