--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@lexical/react": "^0.33.1",
     "@lexical/rich-text": "^0.33.1",
+    "@lexical/selection": "^0.33.1",
+    "@lexical/utils": "^0.33.1",
     "lexical": "^0.33.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
