--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@lexical/rich-text": "^0.34.0",
     "@lexical/selection": "^0.34.0",
     "@lexical/utils": "^0.34.0",
+    "@tailwindcss/vite": "^4.1.11",
     "lexical": "^0.34.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
