--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lexical/utils": "^0.34.0",
     "@tailwindcss/vite": "^4.1.11",
     "lexical": "^0.34.0",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.11"
