Add @lexical/list dependency and integrate ListPlugin into the editor; enhance TypeaheadNodeSelection to support list node insertion.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.15",
+    "@lexical/list": "^0.34.0",
     "@lexical/react": "^0.34.0",
     "@lexical/rich-text": "^0.34.0",
     "@lexical/selection": "^0.34.0",
