--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "updatePackageVersions": "npx npm-check-updates -u && pnpm install"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.27.15",
     "@lexical/list": "^0.34.0",
     "@lexical/react": "^0.34.0",
     "@lexical/rich-text": "^0.34.0",
@@ -21,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "lexical": "^0.34.0",
     "lucide-react": "^0.539.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12"
