--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@lexical/rich-text": "^0.34.0",
     "@lexical/selection": "^0.34.0",
     "@lexical/utils": "^0.34.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.1.12",
     "lexical": "^0.34.0",
     "lucide-react": "^0.539.0",
