--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lexical/selection": "^0.34.0",
     "@lexical/utils": "^0.34.0",
     "@tailwindcss/vite": "^4.1.12",
+    "cookies-next": "^6.1.0",
     "lexical": "^0.34.0",
     "lucide-react": "^0.540.0",
     "radix-ui": "^1.4.3",
